<resources>
    <string name="app_name">photoES</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MainActivity -->
    <string name="storage_access_denied">The app was not allowed to write in your storage.</string>

    <!-- AboutFragment -->
    <string name="app_display_name">photoES</string>
    <string name="app_desc">photo edit share</string>
    <string name="app_version">Version %s</string>
    <string name="app_long_desc">Yan Min\'s Final Year Project 2018/19</string>
    <string name="home_btn_camera">Camera</string>
    <string name="home_btn_folder">Gallery</string>
    <string name="home_btn_arcam">Face Effect Cam</string>
    <string name="home_btn_customsticker">Custom Sticker</string>

    <!-- CameraFragment -->

    <!-- EditImageFragment -->

    <!-- HomeFragment -->

    <!-- PreviewFragment -->
    <string name="toast_img_saved">Image saved.</string>
    <string name="pop_delete_title">Are you sure you want to delete this entry?</string>
    <string name="pop_delete">Press \'CANCEL\' to save image before exiting.</string>

    <!-- FaceEffect -->
    <string name="ok">OK</string>
    <string name="disappointed_ok">Well, okay then.</string>
    <string name="permission_camera_rationale">This app needs access to the camera in order to detect people’s faces.</string>
    <string name="no_camera_permission">This app can’t run because it doesn’t have permission to use the camera. It will now exit.</string>
    <string name="low_storage_error">This app can’t download the face detector components it needs because this device has too little available storage.</string>

    <!--photoeditor-->
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_frames">Frames</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!-- Scratch Custom Sticker-->
    <string name="scratch_btn_reset">Reset</string>
    <string name="scratch_btn_save">Save</string>
    <string name="scratch_btn_erase">Erase</string>
    <string name="scratch_size_set">Size</string>
    <string name="scratch_btn_filter">Filter</string>
    <string name="scratch_editor">Custom Sticker Editor</string>

    <!-- StickerListFragment -->
    <string name="pop_del_sticker_title">Are you sure you want to delete this sticker?</string>
    <string name="pop_del_sticker_dialog">There is no undo.</string>
    <string name="action_settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>


    <!-- Place Picker plugin -->
    <string name="selected_place_info">Selected location information:\n%1$s</string>
    <string name="go_to_picker_activity">Go to place picker activity</string>

    <!--QueryFeatureActivity activity-->
    <string name="query_feature_marker_title">Properties:</string>
    <string name="query_feature_marker_snippet">No feature properties found</string>
    <string name="query_feature_no_properties_found">No feature properties found</string>
    <string name="click_on_map_instruction">Tap on the map</string>

    <!--LocationPickerActivity activity-->
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select a location</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>

</resources>
