<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment"
    android:background="@drawable/background_colour_home">

    <ImageView
        android:id="@+id/app_icon_display"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/photoes_icon_about" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/app_display_name"
        android:textSize="30sp"
        android:textStyle="italic"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/app_desc"
        android:textStyle="italic"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_long_desc"
            android:layout_gravity="center"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>