<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/app_display_name"
        android:textSize="30sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/about_icn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/ic_menu_info_details" />

    <LinearLayout
        android:id="@+id/camera_icn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"
        android:layout_toStartOf="@+id/arcamera_icn"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_if_camera_1891018" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/home_btn_camera"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/folder_icn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/camera_icn"
        android:layout_toEndOf="@+id/arcamera_icn"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="false"
            android:src="@drawable/ic_if_folder_1891015" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/home_btn_folder"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/arcamera_icn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_ar_camera"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_btn_arcam"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

</RelativeLayout>